[BREAKING] rework registrate handling & GTRegistry this is... a lot.